# olymp

./: .gitignore  README.md  ideas.txt  read_macros.rs
acm2014/: 7.cpp
acm2016/: 11.cpp  7.cpp
acm2017/: 10.cpp  12.cpp  4.cpp  7.cpp  9.cpp
acm2018/: 1_old.cpp  1_send.cpp  2.cpp  2_new.cpp  3_my.cpp  4.cpp  5.cpp  6.cpp  8.cpp
acm2019/: 4.cpp
contests/codeforces/: test_all
contests/leetcode/: 3sum-closest.cpp  3sum.cpp  Cargo.toml  README.md  add-two-numbers.cpp  all-nodes-distance-k-in-binary-tree.cpp  average-of-levels-in-binary-tree.cpp  backspace-string-compare.cpp  binary-search.cpp  (+201 more)
fastio/: Cargo.toml
neerc2016/: A (2).cpp  E.cpp
neerc2018/: A.cpp  G.cpp  L.cpp
nsk2017/: 3.0.cpp  3.2.cpp  3.3.cpp  4.cpp  7.cpp  9.cpp
nsk2018/: 1.cpp  4.cpp  5_common.h  5_tables.txt  6.cpp  7.cpp  count_for_5.cpp
nsk2019/: 2.cpp  3.cpp  4.cpp  7.cpp  8.cpp
nstu2018/: 2.cpp  3.cpp  4.cpp
nstu2019/: (){}[].jff  (){}[]2.jff  1.cpp  10.cpp  10_new.cpp  4_new.cpp  8.cpp  json_without_numbers.jff  strings.jff
nth-sum-equals-two/: Cargo.toml
olytest/: Cargo.toml
olytest/src/: codeforces.rs  display.rs  files.rs  lib.rs  main.rs  run.rs  test.rs
olytest/template/: .gitignore
olytest/template/src/: lib.rs  name.rs  name_checker.rs
other/: Cargo.toml
templates/: Cargo.toml  arithmetic_progression.rs  binary_search.rs  bit64.rs  brute_force_test.rs  for_each_number.rs  general_math.rs  imports.rs  iterators.rs  join_display.rs  median.rs  prefix.rs  prefix_suffix.rs  range.rs  read_print.rs  rmq.rs  segment_tree.rs  time.rs  z_function.rs
(+398 files in other folders)
