[package]
name = "olytest"
version = "0.1.0"
authors = ["ilya sheprut <optozorax@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "ol"

[dependencies]
termcolor = "1.1.2"
termcolor_macro = { git = "https://github.com/optozorax/termcolor_macro", rev = "ad7a052" }
diff = "0.1.12"
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.3.6", features = ["process", "io-util", "macros", "rt-multi-thread"] }
reqwest = { version = "0.10.10", features = ["blocking"] }
regex = "1.4.2"
scraper = "0.12.0"
html-escape = "0.2.6"
anyhow = "1.0.36"
